// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Stack] navigator should renders [Dark] mode 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#232323",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#232323",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <RCTSafeAreaView
                        emulateUnlessSupported={true}
                        style={
                          Array [
                            Object {
                              "alignItems": "flex-start",
                              "alignSelf": "stretch",
                              "backgroundColor": "#232323",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "flexWrap": "wrap",
                                "justifyContent": "center",
                                "paddingBottom": 0,
                                "paddingLeft": 24,
                                "paddingRight": 24,
                                "paddingTop": 0,
                                "width": "100%",
                              },
                            ]
                          }
                        >
                          <Image
                            source={
                              Object {
                                "canInstrument": true,
                                "createTransformer": [Function],
                                "getCacheKey": [Function],
                                "process": [Function],
                              }
                            }
                            style={
                              Array [
                                Object {
                                  "alignSelf": "center",
                                  "height": 52,
                                  "marginBottom": 8,
                                  "marginLeft": 0,
                                  "marginRight": 0,
                                  "marginTop": 8,
                                  "width": 124,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[MockFunction]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 18,
                                      "paddingBottom": 0,
                                      "paddingLeft": 28,
                                      "paddingRight": 28,
                                      "paddingTop": 0,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Story
                              </Text>
                            </View>
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[MockFunction]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 18,
                                      "paddingBottom": 0,
                                      "paddingLeft": 28,
                                      "paddingRight": 28,
                                      "paddingTop": 0,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Work
                              </Text>
                            </View>
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[MockFunction]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 18,
                                      "paddingBottom": 0,
                                      "paddingLeft": 28,
                                      "paddingRight": 28,
                                      "paddingTop": 0,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Contact
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "position": "absolute",
                                  "right": 20,
                                  "top": 20,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <View
                                activeOpacity={0.8}
                                onPress={[MockFunction]}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#000000",
                                      "borderRadius": 20,
                                      "justifyContent": "center",
                                      "padding": 12,
                                      "width": 46,
                                    },
                                    Object {},
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "white",
                                      "borderRadius": 9,
                                      "elevation": 1.5,
                                      "height": 18,
                                      "justifyContent": "center",
                                      "left": 0,
                                      "margin": 4,
                                      "position": "absolute",
                                      "shadowColor": "#000",
                                      "shadowOffset": Object {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 0.2,
                                      "shadowRadius": 2.5,
                                      "transform": Array [
                                        Object {
                                          "translateX": 0,
                                        },
                                      ],
                                      "width": 18,
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignSelf": "stretch",
                                "height": 380,
                                "marginTop": 10,
                              },
                            ]
                          }
                        >
                          <View
                            accessibilityIgnoresInvertColors={true}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": 0,
                                  "flexDirection": "column",
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "justifyContent": "center",
                                  "paddingBottom": 0,
                                  "paddingLeft": 24,
                                  "paddingRight": 24,
                                  "paddingTop": 0,
                                },
                              ]
                            }
                          >
                            <Image
                              resizeMode="cover"
                              source={
                                Object {
                                  "uri": Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  },
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "bottom": 0,
                                    "left": 0,
                                    "position": "absolute",
                                    "right": 0,
                                    "top": 0,
                                  },
                                  Object {
                                    "height": undefined,
                                    "width": undefined,
                                  },
                                  Object {
                                    "opacity": 0.7,
                                  },
                                ]
                              }
                            />
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#D3D8E8",
                                    "fontFamily": "futura",
                                    "fontSize": 30,
                                    "fontWeight": "300",
                                    "maxWidth": "60%",
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              Flexible innovation starts with dooboolab
                            </Text>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#D3D8E8",
                                    "fontFamily": "avenir",
                                    "fontSize": 16,
                                    "fontWeight": "300",
                                    "marginTop": 12,
                                    "maxWidth": "60%",
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              We manage strong open source community for individuals, companies, and group of societies.
                            </Text>
                            <View
                              activeOpacity={0.7}
                              delayPressIn={50}
                              onPress={[MockFunction]}
                              style={
                                Object {
                                  "marginTop": 36,
                                }
                              }
                            >
                              <View
                                onLayout={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderRadius": 6,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingLeft": 16,
                                      "paddingRight": 16,
                                    },
                                    Object {
                                      "backgroundColor": "#00BA90",
                                      "borderRadius": 20,
                                      "height": 40,
                                      "paddingHorizontal": 40,
                                    },
                                    false,
                                    undefined,
                                  ]
                                }
                              >
                                <Text
                                  style={
                                    Array [
                                      Object {
                                        "color": "#069ccd",
                                        "fontSize": 14,
                                        "paddingVertical": 12,
                                      },
                                      Object {
                                        "color": "#D3D8E8",
                                        "fontFamily": "avenir",
                                        "fontSize": 16,
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Contact Us
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </RCTSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;

exports[`[Stack] navigator should renders without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#FFFFFF",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <RCTSafeAreaView
                        emulateUnlessSupported={true}
                        style={
                          Array [
                            Object {
                              "alignItems": "flex-start",
                              "alignSelf": "stretch",
                              "backgroundColor": "#FFFFFF",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "flexWrap": "wrap",
                                "justifyContent": "center",
                                "paddingBottom": 0,
                                "paddingLeft": 24,
                                "paddingRight": 24,
                                "paddingTop": 0,
                                "width": "100%",
                              },
                            ]
                          }
                        >
                          <Image
                            source={
                              Object {
                                "canInstrument": true,
                                "createTransformer": [Function],
                                "getCacheKey": [Function],
                                "process": [Function],
                              }
                            }
                            style={
                              Array [
                                Object {
                                  "alignSelf": "center",
                                  "height": 52,
                                  "marginBottom": 8,
                                  "marginLeft": 0,
                                  "marginRight": 0,
                                  "marginTop": 8,
                                  "width": 124,
                                },
                              ]
                            }
                          />
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[MockFunction]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 18,
                                      "paddingBottom": 0,
                                      "paddingLeft": 28,
                                      "paddingRight": 28,
                                      "paddingTop": 0,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Story
                              </Text>
                            </View>
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[MockFunction]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 18,
                                      "paddingBottom": 0,
                                      "paddingLeft": 28,
                                      "paddingRight": 28,
                                      "paddingTop": 0,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Work
                              </Text>
                            </View>
                            <View
                              activeOpacity={0.7}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              onPress={[MockFunction]}
                              onPressIn={[Function]}
                              onPressOut={[Function]}
                              onResponderGrant={[Function]}
                              onResponderRelease={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "marginRight": 20,
                                  },
                                ]
                              }
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 18,
                                      "paddingBottom": 0,
                                      "paddingLeft": 28,
                                      "paddingRight": 28,
                                      "paddingTop": 0,
                                    },
                                    false,
                                  ]
                                }
                              >
                                Contact
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "position": "absolute",
                                  "right": 20,
                                  "top": 20,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                }
                              }
                            >
                              <View
                                activeOpacity={0.8}
                                onPress={[MockFunction]}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#ecf0f1",
                                      "borderRadius": 20,
                                      "justifyContent": "center",
                                      "padding": 12,
                                      "width": 46,
                                    },
                                    Object {},
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "white",
                                      "borderRadius": 9,
                                      "elevation": 1.5,
                                      "height": 18,
                                      "justifyContent": "center",
                                      "left": 0,
                                      "margin": 4,
                                      "position": "absolute",
                                      "shadowColor": "#000",
                                      "shadowOffset": Object {
                                        "height": 2,
                                        "width": 0,
                                      },
                                      "shadowOpacity": 0.2,
                                      "shadowRadius": 2.5,
                                      "transform": Array [
                                        Object {
                                          "translateX": 0,
                                        },
                                      ],
                                      "width": 18,
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignSelf": "stretch",
                                "height": 380,
                                "marginTop": 10,
                              },
                            ]
                          }
                        >
                          <View
                            accessibilityIgnoresInvertColors={true}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "flexBasis": 0,
                                  "flexDirection": "column",
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "justifyContent": "center",
                                  "paddingBottom": 0,
                                  "paddingLeft": 24,
                                  "paddingRight": 24,
                                  "paddingTop": 0,
                                },
                              ]
                            }
                          >
                            <Image
                              resizeMode="cover"
                              source={
                                Object {
                                  "uri": Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  },
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "bottom": 0,
                                    "left": 0,
                                    "position": "absolute",
                                    "right": 0,
                                    "top": 0,
                                  },
                                  Object {
                                    "height": undefined,
                                    "width": undefined,
                                  },
                                  Object {
                                    "opacity": 0.7,
                                  },
                                ]
                              }
                            />
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#000000",
                                    "fontFamily": "futura",
                                    "fontSize": 30,
                                    "fontWeight": "300",
                                    "maxWidth": "60%",
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              Flexible innovation starts with dooboolab
                            </Text>
                            <Text
                              style={
                                Array [
                                  Object {
                                    "color": "#000000",
                                    "fontFamily": "avenir",
                                    "fontSize": 16,
                                    "fontWeight": "300",
                                    "marginTop": 12,
                                    "maxWidth": "60%",
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                              We manage strong open source community for individuals, companies, and group of societies.
                            </Text>
                            <View
                              activeOpacity={0.7}
                              delayPressIn={50}
                              onPress={[MockFunction]}
                              style={
                                Object {
                                  "marginTop": 36,
                                }
                              }
                            >
                              <View
                                onLayout={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderRadius": 6,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingLeft": 16,
                                      "paddingRight": 16,
                                    },
                                    Object {
                                      "backgroundColor": "#00BA90",
                                      "borderRadius": 20,
                                      "height": 40,
                                      "paddingHorizontal": 40,
                                    },
                                    false,
                                    undefined,
                                  ]
                                }
                              >
                                <Text
                                  style={
                                    Array [
                                      Object {
                                        "color": "#069ccd",
                                        "fontSize": 14,
                                        "paddingVertical": 12,
                                      },
                                      Object {
                                        "color": "#000000",
                                        "fontFamily": "avenir",
                                        "fontSize": 16,
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Contact Us
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </RCTSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;
